@@ -1,3 +1,7 @@
+2003-07-29  Wakaba  <wakaba@suika.fam.cx>
+
+	* Error.pm: New module.
+
 2003-05-10  Wakaba  <w@offweb.ddo.jp>
 
 	* Formatter.pm (replace): Bug fix of pattern.
